Use column delimiter syntax

--- a/ddclient/files/ddclient.conf
+++ b/ddclient/files/ddclient.conf
@@ -1,6 +1,5 @@
-{%- set ddclient = pillar.get('ddclient', {}) %}
-{%- set globals = ddclient.get('globals', {}) %}
-{%- set hosts = ddclient.get('hosts', {}) %}
+{%- set globals = salt['pillar.get']('ddclient:globals', {}) %}
+{%- set hosts = salt['pillar.get']('ddclient:hosts', {}) %}
 #
 # This file is managed by salt.
 # Run `ddclient -help` to see examples of how to configure ddclient
